HelloUltraviolet/Fixtures/RejectedSource/Parallelism/DispatchOutsideParallel/Expected.uv
//! Expected diagnostic metadata for the DispatchOutsideParallel rejected-source specimen.

expectedDiagnostic("E-CON-0140", "rule.20.Dispatch-Outside-Err")
